# CircuitPython_PCA9956BTW

./: LICENSE  README.rst  README.rst.license  pca9956btw.py  pyproject.toml  requirements.txt
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst
examples/: pca9956btw_simpletest.py
